grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service    # < name of the service
  namespace: grafana # < namespace where place the deployment and pods
spec:
  selector:
    app: grafana # < reference to the deployment (connects with this deployment)
  ports:
    - name: webinterface
      protocol: TCP
      port: 3000
